[package]
name = "oxideav-audio-filter"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-audio-filter"
authors = ["Mark Karpeles"]
description = "Pure-Rust audio filters (volume, gate, echo, resample, spectrogram) for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-audio-filter"
keywords = ["multimedia", "audio", "filter", "resample", "effects"]
categories = ["multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
serde_json = "1"
